# RAG-AIOps-prod

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  app2.py  chroma_utils.py  deps_install.sh  docker-compose.yml  langchain_utils.py  pydantic_models_format.py  pyproject.toml  requirements.txt  test.ipynb
chroma_db/: chroma.sqlite3
